@@ -1,8 +1,12 @@
+AP-2008-07-23-0: Bugfix:     Host specific values shouldn't be added for hostlist
+                             attribute.
+                 Review:     JG
+
 CR-2008-07-23-0: Bugfix:     Fixed hedeby test cli/comp_lifecycle/ge_adapter
                              (ge_adapter_restart_test)
                  Review:     TB
 
-JG-2008-07-23-0: Bugfix:     Workaround for CR 6728379 in check 
+JG-2008-07-23-0: Bugfix:     Workaround for CR 6728379 in check
                              functional/tight_integration.
                  Review:     DG
 
